@@ -4,6 +4,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
           - added Thruk theme
           - added config tool for cgi.cfg and thruk.conf
           - added logo_path_prefix option
+          - added state change filter
           - sidebar search autosubmits on select
           - fixed problem with "delete all downtimes" link
 
